# cop_rl

./: CLAUDE.MD  Makefile  README.md  pyproject.toml
.serena/: project.yml
nbks/: 1_0_RL.ipynb  1_10_case_study_games.ipynb  1_1_MDP.ipynb  1_1_bandit.ipynb  1_2_MDP.ipynb  1_3_DP.ipynb  1_4_model_free_predictions.ipynb  1_5_model_free_control.ipynb  1_6_value_function_approx.ipynb  1_7_policy_gradient.ipynb  1_8_intg_learning_planning.ipynb  1_9_exploration_exploitation.ipynb  1_mrp_planning.ipynb  alpha_beta_search_example.html  gym.ipynb  mdp.ipynb  mobble.md
nbks/archive/: 1_mrp_planning.ipynb  _0_bandit.ipynb  mdp.ipynb
nbks/imgs/: README.md
